--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "Vibez-md",
-    "description": "I am Vibez-MD a Whatsapp bot to fill you with the Vibez😎🎧\n\t if Any Problem contact : 2347039853320",
+    "description": "I am Vibez-MD a Whatsapp bot created with Vibez😎🎧\n\t if Any Problem contact : 2347039853320",
     "logo": "https://telegra.ph/file/d72deaffcab4cb15c6921.jpg",
     "repository": "https://github.com/SuhailTechInfo/web-qr",
     "keywords": ["whatsappbot", "Vibez-MD","multi device"],
@@ -14,7 +14,7 @@
       },
       "MESSAGE": {
         "description": "set session id conformation message",
-        "value": "╔════◇\n║ *『 Vibe with Vibez-MD 』*\n║ _Deploy Vibez-MD and vibe😎🎧._\n╚════════════════════════╝\n╔═════◇\n║  『••• 𝗩𝗶𝘀𝗶𝘁 𝗙𝗼𝗿 𝗛𝗲𝗹𝗽 •••』\n║ *Ytube:* _youtube.com/SuhailTechInfo_\n║ *Owner:* _https://wa.me/923184474176_\n║ *Note :*_Don't provide your SESSION_ID to_\n║ _anyone otherwise that can access chats_\n╚════════════════════════╝",
+        "value": "╔════◇\n║ *『 Vibe with Vibez-MD 』*\n║ _Deploy Vibez-MD and vibe😎🎧._\n╚════════════════════════╝",
         "required": false 
       }
     }   
